[project]
name = "prod-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "langchain-google-genai>=4.2.4",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "langsmith>=0.8.9",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "slowapi>=0.1.9",
    "uvicorn>=0.49.0",
    # Vector DB
    "qdrant-client>=1.9.0",
    # Hybrid retrieval
    "rank-bm25>=0.2.2",
    # PDF processing
    "pypdf>=4.0.0",
    "pdf2image>=1.17.0",
    "pillow>=10.0.0",
    # Reranking
    "cohere>=5.0.0",
    # Misc
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "voyageai>=0.4.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
